implemented board selection